up dev dependencies and fix acorn vulnerability

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "baseUrl": "src",
     "moduleResolution": "node",
     "module": "ES2015",
-    "target": "ES2018"
+    "target": "ES2018",
+    "strictFunctionTypes": true,
+    "noImplicitReturns": true
   },
   "files": [
     "src/index.ts"
